# Assessment_Get_covered

./: .dockerignore  .env.example  .gitignore  Plan.md  README.md  api.md  docker-compose.coolify.yml  docker-compose.yml  pyproject.toml  render.yaml
backend/: Dockerfile
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py  logging.py
backend/app/security/: network_safety.py  url_validation.py
backend/app/services/: auth_detector.py  browser_service.py  dom_service.py  formatter.py  metrics_service.py  ports.py  providers.py  rate_limiter.py  redis_rate_limiter.py  redis_scan_job_manager.py  result_cache.py  scan_job_manager.py  scan_orchestrator.py  snippet_extractor.py
backend/app/tests/integration/: test_detection_pipeline.py
backend/app/tests/unit/: test_auth_detector.py  test_providers.py  test_rate_limiter.py  test_scan_job_manager.py  test_snippet_extractor.py  test_url_validation.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
nginx/: Dockerfile  nginx.conf
