[project]
name = "auth-snippet-finder"
version = "0.1.0"
description = "Scalable auth snippet discovery backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "playwright>=1.55.0",
  "beautifulsoup4>=4.13.5",
  "lxml>=6.0.2",
  "pydantic>=2.11.10",
  "redis>=6.4.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/app/tests"]
